Replace deprecated wrapper constructors with valueOf (Integer, Double, Float)